changed what will appear as text on google search desc

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <title>Kevin Pallikunnel</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Software Engineer and Lover of Math, Welcome to my Personal Site.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
